fixed bug where screen jumps when user clicks on labels :bug:

--- a/styles/sass/_form.scss
+++ b/styles/sass/_form.scss
@@ -41,6 +41,8 @@
             box-shadow: 0 0 10px $font-colour;
         }
         label {
+            position: relative;
+            overflow: hidden;
             font-size: 2rem;
             text-transform: uppercase;
             text-align: center;
@@ -60,6 +62,7 @@
         }
         input[type=radio] {
             position: absolute;
+            bottom: 0;
             opacity: 0;
                 &:checked + label {
                     background-color: $option-active;
